Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19459

Multiple forestdb crash seen with build 2428

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.5.0
    • 4.5.0
    • forestdb
    • 2428

    Description

      Seeing multiple forestdb crashes with build 2428:

      Service 'indexer' exited with status 1. Restarting. Messages:    0750   30 2c 30 2c 30 2c 30 2c  30 2c 30 00 31 39 2d  00 00 00 00 00 e7 cc b8   -..>>19-........
         06e0   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00 2c 00 00 00 37  36 2c 30   0,0,0,0,Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/4b109f04-4d5b-f515-3634f7fd-2dbadc53.dmp before terminating.
        ................
         06f0   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
         0700   08 08 03 00 01 [goport] 2016/05/01 12:28:04 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:28:04 PM Sun May 1, 2016
      

      Service 'indexer' exited with status 1. Restarting. Messages: 2016-05-01T12:27:45.708-07:00 [Info] Indexer::monitorMemUsage started...
      2016-05-01T12:27:45.709-07:00 [Info] memstats {"Alloc":0, "TotalAlloc":0, "Sys":0, "Lookups":0, "Mallocs":0,"Frees":0, "HeapAlloc":0, "HeapSys":0, "HeapIdle":0, "HeapInuse":0,"HeapReleased":0, "HeapObjects":0,"GCSys":0, "LastGC":0,"PauseTotalNs":0, "PauseNs":[], "NumGC":0}
      2016-05-01T12:27:45.709-07:00 [Info] Indexer: Setting GC percent to 100
      Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/1167d1d9-379f-c727-14bb1b1e-058b9025.dmp before terminating.
      [goport] 2016/05/01 12:27:46 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:27:47 PM Sun May 1, 2016
      

      Service 'indexer' exited with status 1. Restarting. Messages:    0480   7b 22 42 75 63 6b 65 74  22 3a 22 57 41 52 45 48   {"Bucket":"WAREH
         0490   4f 55 53 45 22 2c 22 53  65 71 6e 6f Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/18f4b3bf-4e15-1bec-1234bef2-22ab4a8d.dmp before terminating.
      73 22 3a 5b   OUSE","Seqnos":[
         04a0   30 2c 30 2c 30 2c 30 2c  30 2c 30 2c 30 2c 30 2c   0,0,0,0,0,0,0,0,
         04b0   30 2c 30 2c 30 [goport] 2016/05/01 12:27:29 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:27:29 PM Sun May 1, 2016
      

      Service 'indexer' exited with status 1. Restarting. Messages: 2016-05-01T12:27:17.047-07:00 [Info] Indexer::monitorMemUsage started...
      2016-05-01T12:27:17.047-07:00 [Info] memstats {"Alloc":0, "TotalAlloc":0, "Sys":0, "Lookups":0, "Mallocs":0,"Frees":0, "HeapAlloc":0, "HeapSys":0, "HeapIdle":0, "HeapInuse":0,"HeapReleased":0, "HeapObjects":0,"GCSys":0, "LastGC":0,"PauseTotalNs":0, "PauseNs":[], "NumGC":0}
      2016-05-01T12:27:17.047-07:00 [Info] Indexer: Setting GC percent to 100
      Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/566653dd-c846-a0f4-5427edcc-587b36b2.dmp before terminating.
      [goport] 2016/05/01 12:27:18 /opt/couchbase/bin/indexer terminated: signal: segmentation fault (core dumped)
      

      Service 'indexer' exited with status 1. Restarting. Messages: runtime.goexit()
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/asm_amd64.s:1998 +0x1 fp=0xc867fbcf48 sp=0xc867fbcf40
      created by github.com/couchbase/indexing/secondary/indexer.(*storageMgr).createSnapshotWorker
      	/home/couchbase/jenkins/workspace/watson-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/storage_manager.go:387 +0x229
      [goport] 2016/05/01 12:34:54 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:34:54 PM Sun May 1, 2016
      Node 'ns_1@10.6.2.234' saw that node 'ns_1@10.6.2.168' went down. Details: [{nodedown_reason,
                                                                                   connection_closed}]	ns_node_disco 005	ns_1@10.6.2.234	12:32:03 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages: runtime.goexit()
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/asm_amd64.s:1998 +0x1 fp=0xc827608f48 sp=0xc827608f40
      created by github.com/couchbase/indexing/secondary/indexer.(*storageMgr).createSnapshotWorker
      	/home/couchbase/jenkins/workspace/watson-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/storage_manager.go:387 +0x229
      [goport] 2016/05/01 12:30:57 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:30:57 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages: runtime.goexit()
      	/home/couchbase/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/asm_amd64.s:1998 +0x1 fp=0xc890b49fa8 sp=0xc890b49fa0
      created by github.com/couchbase/indexing/secondary/indexer.(*atomicMutationQueue).DequeueUptoSeqno
      	/home/couchbase/jenkins/workspace/watson-unix/goproj/src/github.com/couchbase/indexing/secondary/indexer/mutation_queue_atomic.go:169 +0x84
      [goport] 2016/05/01 12:29:02 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:29:02 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages:    0750   30 2c 30 2c 30 2c 30 2c  30 2c 30 00 31 39 2d  00 00 00 00 00 e7 cc b8   -..>>19-........
         06e0   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00 2c 00 00 00 37  36 2c 30   0,0,0,0,Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/4b109f04-4d5b-f515-3634f7fd-2dbadc53.dmp before terminating.
        ................
         06f0   00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00   ................
         0700   08 08 03 00 01 [goport] 2016/05/01 12:28:04 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:28:04 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages: 2016-05-01T12:27:45.708-07:00 [Info] Indexer::monitorMemUsage started...
      2016-05-01T12:27:45.709-07:00 [Info] memstats {"Alloc":0, "TotalAlloc":0, "Sys":0, "Lookups":0, "Mallocs":0,"Frees":0, "HeapAlloc":0, "HeapSys":0, "HeapIdle":0, "HeapInuse":0,"HeapReleased":0, "HeapObjects":0,"GCSys":0, "LastGC":0,"PauseTotalNs":0, "PauseNs":[], "NumGC":0}
      2016-05-01T12:27:45.709-07:00 [Info] Indexer: Setting GC percent to 100
      Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/1167d1d9-379f-c727-14bb1b1e-058b9025.dmp before terminating.
      [goport] 2016/05/01 12:27:46 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:27:47 PM Sun May 1, 2016
      Node 'ns_1@10.6.2.195' saw that node 'ns_1@10.6.2.168' went down. Details: [{nodedown_reason,
                                                                                   connection_closed}]	ns_node_disco 005	ns_1@10.6.2.195	12:27:41 PM Sun May 1, 2016
      Node 'ns_1@10.6.2.194' saw that node 'ns_1@10.6.2.168' went down. Details: [{nodedown_reason,
                                                                                   connection_closed}]	ns_node_disco 005	ns_1@10.6.2.194	12:27:41 PM Sun May 1, 2016
      Node 'ns_1@10.6.2.164' saw that node 'ns_1@10.6.2.168' went down. Details: [{nodedown_reason,
                                                                                   connection_closed}]	ns_node_disco 005	ns_1@10.6.2.164	12:27:41 PM Sun May 1, 2016
      Node 'ns_1@10.6.2.167' saw that node 'ns_1@10.6.2.168' went down. Details: [{nodedown_reason,
                                                                                   connection_closed}]	ns_node_disco 005	ns_1@10.6.2.167	12:27:41 PM Sun May 1, 2016
      Shutting down bucket "default" on 'ns_1@10.6.2.168' for deletion	ns_memcached 000	ns_1@10.6.2.168	12:27:40 PM Sun May 1, 2016
      Reset auto-failover count	auto_failover 000	ns_1@10.6.2.164	12:27:39 PM Sun May 1, 2016
      Rebalance completed successfully.
      ns_orchestrator 001	ns_1@10.6.2.164	12:27:39 PM Sun May 1, 2016
      Node 'ns_1@10.6.2.168' is leaving cluster.	ns_cluster 001	ns_1@10.6.2.168	12:27:39 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages:    0480   7b 22 42 75 63 6b 65 74  22 3a 22 57 41 52 45 48   {"Bucket":"WAREH
         0490   4f 55 53 45 22 2c 22 53  65 71 6e 6f Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/18f4b3bf-4e15-1bec-1234bef2-22ab4a8d.dmp before terminating.
      73 22 3a 5b   OUSE","Seqnos":[
         04a0   30 2c 30 2c 30 2c 30 2c  30 2c 30 2c 30 2c 30 2c   0,0,0,0,0,0,0,0,
         04b0   30 2c 30 2c 30 [goport] 2016/05/01 12:27:29 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:27:29 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages: 2016-05-01T12:27:17.047-07:00 [Info] Indexer::monitorMemUsage started...
      2016-05-01T12:27:17.047-07:00 [Info] memstats {"Alloc":0, "TotalAlloc":0, "Sys":0, "Lookups":0, "Mallocs":0,"Frees":0, "HeapAlloc":0, "HeapSys":0, "HeapIdle":0, "HeapInuse":0,"HeapReleased":0, "HeapObjects":0,"GCSys":0, "LastGC":0,"PauseTotalNs":0, "PauseNs":[], "NumGC":0}
      2016-05-01T12:27:17.047-07:00 [Info] Indexer: Setting GC percent to 100
      Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/566653dd-c846-a0f4-5427edcc-587b36b2.dmp before terminating.
      [goport] 2016/05/01 12:27:18 /opt/couchbase/bin/indexer terminated: signal: segmentation fault (core dumped)	ns_log 000	ns_1@10.6.2.195	12:27:18 PM Sun May 1, 2016
      Service 'indexer' exited with status 1. Restarting. Messages: 2016-05-01T12:27:01.143-07:00 [Info] Indexer::monitorMemUsage started...
      2016-05-01T12:27:01.143-07:00 [Info] memstats {"Alloc":0, "TotalAlloc":0, "Sys":0, "Lookups":0, "Mallocs":0,"Frees":0, "HeapAlloc":0, "HeapSys":0, "HeapIdle":0, "HeapInuse":0,"HeapReleased":0, "HeapObjects":0,"GCSys":0, "LastGC":0,"PauseTotalNs":0, "PauseNs":[], "NumGC":0}
      2016-05-01T12:27:01.144-07:00 [Info] Indexer: Setting GC percent to 100
      Breakpad caught a crash in forestdb. Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/1d5ed57c-7e22-ae42-737174df-7167d65e.dmp before terminating.
      [goport] 2016/05/01 12:27:02 /opt/couchbase/bin/indexer terminated: signal: aborted (core dumped)	ns_log 000	ns_1@10.6.2.195	12:27:02 PM Sun May 1, 2016
      

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-19459
          # Subject Branch Project Status CR V

          Activity

            People

              ritam.sharma Ritam Sharma
              ritam.sharma Ritam Sharma
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty