MB-19459 Do not move entire sub-blocks in a block to new block at once

- The corresponding pointers in the parent node are not updated
properly so that crash happens when old sub-blocks are reclaimed.

- Move the target sub-block one by one.

- Also, add btreeblk_reset_subblock_info() call after each
filemgr_commit() call.

Change-Id: I194cbedb4d22b4929900e8becf11ce0b0c1beb43
Reviewed-on: http://review.couchbase.org/63617
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>